Feat: added Play and Restart button With total control given to audio context for flapping the bird

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Flappy Bird</title>
-        <link rel="stylesheet" href="flappybird.css">
-        <script src="flappybird.js"></script>
-    </head>
-    <body>
-        <canvas id="board"></canvas>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" , content="width=device-width, initial-scale=1.0" />
+    <title>Flappy Bird</title>
+    <link rel="stylesheet" href="flappybird.css" />
+    <script src="flappybird.js"></script>
+  </head>
+  <body>
+    <div id="start-screen">
+      <h1 class="game-title">VOICE CONTROLLED FLAPPY BIRD</h1>
+      <button id="play-btn">PLAY</button>
+    </div>
+    <div id="game-over-screen" class="hidden">
+      <h1 class="game-title">GAME OVER</h1>
+      <p id="final-score">Score: 0</p>
+      <button id="restart-btn">RESTART</button>
+    </div>
+    <canvas id="board"></canvas>
+  </body>
 </html>
