--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flappy Bird</title>
+    <title>WOWBIE</title>
     <link rel="stylesheet" href="flappybird.css" />
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
@@ -12,7 +12,7 @@
   <body>
     <!-- Signup Screen -->
     <div id="signup-screen">
-      <h1 class="game-title">FLAPPY BIRD</h1>
+      <h1 class="game-title">WOWBIE</h1>
       <input
         type="text"
         id="username"
@@ -78,7 +78,7 @@
       <h1 class="game-title">GAME OVER</h1>
       <p id="final-score">Score: 0</p>
       <button id="restart-btn">RESTART</button>
-      <button id="home-btn" class="secondary-btn">HOME</button>
+      <button id="home-btn" class="tertiary-btn">HOME</button>
       <button id="logout-btn-gameover" class="secondary-btn">LOGOUT</button>
     </div>
 
