Feat: Added victory screen after 30 points

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
       <button id="logout-btn-gameover" class="secondary-btn">LOGOUT</button>
     </div>
 
+    <!-- Victory Screen -->
+    <div id="victory-screen" class="hidden">
+      <h1 class="game-title">Wow! <br />You Won</h1>
+      <p id="victory-score">Score: 30</p>
+      <button id="victory-restart-btn">PLAY AGAIN</button>
+      <button id="victory-home-btn" class="tertiary-btn">HOME</button>
+      <button id="victory-logout-btn" class="secondary-btn">LOGOUT</button>
+    </div>
+
     <canvas id="board"></canvas>
   </body>
 </html>
