--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WOWBIE</title>
+    <title>Wowbie</title>
     <link rel="stylesheet" href="flappybird.css" />
+    <link rel="icon" href="flappybird.png" type="image/x-icon" />
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <script src="flappybird.js"></script>
