Feat: added sfx music to gameplay

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wowbie</title>
     <link rel="stylesheet" href="flappybird.css" />
-    <link rel="icon" href="flappybird.png" type="image/x-icon" />
+    <link rel="icon" href="assets/Images/flappybird.png" type="image/x-icon" />
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <script src="flappybird.js"></script>
@@ -35,6 +35,7 @@
 
     <!-- Start Screen -->
     <div id="start-screen" class="hidden">
+      <button id="mute-btn" class="mute-btn">🔊</button>
       <button id="leaderboard-btn" class="tertiary-btn">🏆 LEADERBOARD</button>
       <div class="instructions">
         <h2>HOW TO PLAY</h2>
