Fix: made login page as a default one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="flappybird.js"></script>
   </head>
   <body>
-    <!-- Signup Screen -->
+    <!-- Login Screen -->
     <div id="signup-screen">
       <h1 class="game-title">WOWBIE</h1>
       <input
@@ -24,12 +24,12 @@
         type="email"
         id="email"
         placeholder="Email (optional)"
-        class="game-input"
+        class="game-input hidden"
       />
       <p id="signup-error" class="error-msg hidden"></p>
-      <button id="signup-btn">ENTER GAME</button>
+      <button id="signup-btn">LOGIN</button>
       <p id="auth-toggle">
-        Already have an account? <span class="action-link">Log In</span>
+        New player? <span class="action-link">Sign Up</span>
       </p>
     </div>
 
