Fix: Fixed Image Paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wowbie - Voice Controlled Flappy Bird</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="icon" href="./Images/flappybird.png" type="image/x-icon" />
+    <link rel="icon" href="/Images/flappybird.png" type="image/x-icon" />
   </head>
   <body>
     <!-- Login Screen -->
@@ -47,7 +47,7 @@
     <!-- Leaderboard Screen -->
     <div id="leaderboard-screen" class="hidden">
       <div class="leaderboard-header">
-        <img src="./Images/win.png" alt="Trophy" class="trophy-img" />
+        <img src="/Images/win.png" alt="Trophy" class="trophy-img" />
         <h1 class="game-title">LEADERBOARD</h1>
       </div>
 
@@ -89,7 +89,7 @@
     <div id="victory-screen" class="hidden">
       <div class="game-over-content">
         <img
-          src="./Images/win.png"
+          src="/Images/win.png"
           alt="Victory Trophy"
           class="victory-trophy-img"
         />
